# pokegame01

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  readme.md
dezhoupoke/: poke.cc  poke.h
game/: ladingou.cc
test/: testpoke.cc
